# SeaSaltOrigami

./: .gitignore  CMakeLists.txt  Card.cpp  Card.h  CardPile.cpp  CardPile.h  GameRule.cpp  GameRule.h  LICENSE  Player.cpp  Player.h  README.md  SeaSaltGameController.cpp  SeaSaltGameController.h  main.cpp  mainwindow.h  mainwindow.ui
qml/: BuffStrip.qml  CollectStrip.qml  GameActionBar.qml  GameCard.qml  GameHeader.qml  GamePlay.qml  GameTextButton.qml  HandStrip.qml  Main.qml  MainMenu.qml  MenuPrimaryButton.qml  PileSpot.qml  PileStrip.qml  PlayedPairStrip.qml  SettingsScreen.qml  Theme.qml  TutorialScreen.qml
tests/: rule_smoke_test.cpp
